[gd_scene load_steps=6 format=3 uid="uid://byvolqh12k2kt"]

[ext_resource type="Script" uid="uid://cryfqlsnud2ye" path="res://ui_scenes/scripts/observations_tab.gd" id="1_72ays"]
[ext_resource type="PackedScene" uid="uid://cf2745l7x4l6w" path="res://ui_components/scenes/observation_file_display.tscn" id="1_bcc3s"]
[ext_resource type="PackedScene" uid="uid://dr0cr4ycmekhm" path="res://ui_components/scenes/observation_edit.tscn" id="3_lukjf"]
[ext_resource type="PackedScene" uid="uid://2ungak734q35" path="res://ui_components/scenes/observation_display.tscn" id="4_0wtnq"]
[ext_resource type="PackedScene" uid="uid://i82tt2eaij30" path="res://ui_components/scenes/fullscreen_layer.tscn" id="4_lukjf"]

[node name="ObservationsTab" type="Control" node_paths=PackedStringArray("file_inspect", "placeholder", "obs_edit", "obs_display", "fullscreen_layer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72ays")
file_inspect = NodePath("HBoxContainer/ObservationFileDisplay")
placeholder = NodePath("HBoxContainer/Placeholder")
obs_edit = NodePath("HBoxContainer/ObservationEdit")
obs_display = NodePath("HBoxContainer/ObservationDisplay")
fullscreen_layer = NodePath("FullscreenLayer")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ObservationFileDisplay" parent="HBoxContainer" instance=ExtResource("1_bcc3s")]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="Placeholder" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ObservationEdit" parent="HBoxContainer" instance=ExtResource("3_lukjf")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="ObservationDisplay" parent="HBoxContainer" instance=ExtResource("4_0wtnq")]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="FullscreenLayer" parent="." instance=ExtResource("4_lukjf")]
visible = false
